--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Revealing my Strategies to any Pass Prop Firm Challenge (+ Backtests)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">38 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>#Throwback2019 Sadhguru's Visit to Mahatma Gandhi's Sabarmati Ashram</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>The secret behind consistently profitable traders!</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -2329,7 +2329,7 @@
                     <div class="video-info">
                         <h3>Typhur Dome 2 Review - Is This Literally. amazing. for baking chips, meat and pizzas</h3>
                         <div class="channel">Massimo Nocerino Pizza Massimo</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Sep 02, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5085,7 +5085,7 @@
                         <div class="video-info">
                             <h3>Revealing my Strategies to any Pass Prop Firm Challenge (+ Backtests)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">38 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5140,7 +5140,7 @@
                         <div class="video-info">
                             <h3>The secret behind consistently profitable traders!</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7286,7 +7286,7 @@
                         <div class="video-info">
                             <h3>#Throwback2019 Sadhguru's Visit to Mahatma Gandhi's Sabarmati Ashram</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9047,7 +9047,7 @@
                         <div class="video-info">
                             <h3>Typhur Dome 2 Review - Is This Literally. amazing. for baking chips, meat and pizzas</h3>
                             <div class="channel">Massimo Nocerino Pizza Massimo</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Sep 02, 2025</div>
                         </div>
                     </a>
                 </div>
