--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Corporate Bond Strategy (Backtested)</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -279,7 +279,7 @@
                     <div class="video-info">
                         <h3>Vijayadashami – A Day of Victory | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -941,7 +941,7 @@
                     <div class="video-info">
                         <h3>VIKKSTAR IN WORLD’S FASTEST CAR</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5118,7 +5118,7 @@
                         <div class="video-info">
                             <h3>Corporate Bond Strategy (Backtested)</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7308,7 +7308,7 @@
                         <div class="video-info">
                             <h3>Vijayadashami – A Day of Victory | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9620,7 +9620,7 @@
                         <div class="video-info">
                             <h3>VIKKSTAR IN WORLD’S FASTEST CAR</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
