--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
     
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=i_rWug6ykec" target="_blank">
-                    <img src="https://i.ytimg.com/vi/i_rWug6ykec/mqdefault.jpg" alt="SIDEMEN REMATCH BUT WE'RE PRO">
+                    <img src="https://i.ytimg.com/vi/i_rWug6ykec/mqdefault.jpg" alt="SIDEMEN REMATCH BUT THEY'RE ACTUALLY GOOD?">
                     <div class="video-info">
-                        <h3>SIDEMEN REMATCH BUT WE'RE PRO</h3>
+                        <h3>SIDEMEN REMATCH BUT THEY'RE ACTUALLY GOOD?</h3>
                         <div class="channel">MoreSidemen</div>
                         <div class="date">2 hours ago</div>
                     </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>The secret behind consistently profitable traders!</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -5140,7 +5140,7 @@
                         <div class="video-info">
                             <h3>The secret behind consistently profitable traders!</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9572,9 +9572,9 @@
         
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=i_rWug6ykec" target="_blank">
-                        <img src="https://i.ytimg.com/vi/i_rWug6ykec/mqdefault.jpg" alt="SIDEMEN REMATCH BUT WE'RE PRO">
+                        <img src="https://i.ytimg.com/vi/i_rWug6ykec/mqdefault.jpg" alt="SIDEMEN REMATCH BUT THEY'RE ACTUALLY GOOD?">
                         <div class="video-info">
-                            <h3>SIDEMEN REMATCH BUT WE'RE PRO</h3>
+                            <h3>SIDEMEN REMATCH BUT THEY'RE ACTUALLY GOOD?</h3>
                             <div class="channel">MoreSidemen</div>
                             <div class="date">2 hours ago</div>
                         </div>
