--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN REMATCH BUT THEY'RE ACTUALLY GOOD?</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Revealing my Strategies to any Pass Prop Firm Challenge (+ Backtests)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>The Bizarre Cult of Pythagoras</h3>
                         <div class="channel">Einzelgänger</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Pythagoras Was a Cult Leader</h3>
                         <div class="channel">Einzelgänger</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>How Pythagoras Punished His Followers</h3>
                         <div class="channel">Einzelgänger</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Spiritual Growth Is Beyond Your Comfort Zone | Eckhart Tolle on The Path To Enlightenment (Part 1)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>The second tier of our Seed Allocation Programme - DarwinIA Gold</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>The Monthly Seed Allocation Programme - DarwinIA SILVER</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Corporate Bond Strategy (Backtested)</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>ChatGPT's False Facts: My Son's Kevin Davey Story! #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>#Throwback2019 Sadhguru's Visit to Mahatma Gandhi's Sabarmati Ashram</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>The secret behind consistently profitable traders!</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Using Reality to Let Go of Yourself</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>FINAL UPDATE: I Am Letting An AI Algo Trade My Money For 30 Days -Can A Robot Beat The Market & Me?</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -279,7 +279,7 @@
                         <h3>[REAL ACCOUNT] Forex & CFD Expert Advisor Livetrading + Q&A Session
 (XAUUSD, USDJPY, US30...)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -290,7 +290,7 @@
                     <div class="video-info">
                         <h3>Vijayadashami – A Day of Victory | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -308,9 +308,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=gqWOBI60jak" target="_blank">
-                    <img src="https://i.ytimg.com/vi/gqWOBI60jak/mqdefault.jpg" alt="Coding a Forex Factory News Filter for the5ers Prop Firm Expert Advisor">
+                    <img src="https://i.ytimg.com/vi/gqWOBI60jak/mqdefault.jpg" alt="News Filter Programming for MT5 Expert Advisor (mql5 Tutorial)">
                     <div class="video-info">
-                        <h3>Coding a Forex Factory News Filter for the5ers Prop Firm Expert Advisor</h3>
+                        <h3>News Filter Programming for MT5 Expert Advisor (mql5 Tutorial)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
                         <div class="date">Yesterday</div>
                     </div>
@@ -5085,7 +5085,7 @@
                         <div class="video-info">
                             <h3>Revealing my Strategies to any Pass Prop Firm Challenge (+ Backtests)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5096,7 +5096,7 @@
                         <div class="video-info">
                             <h3>The second tier of our Seed Allocation Programme - DarwinIA Gold</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5107,7 +5107,7 @@
                         <div class="video-info">
                             <h3>The Monthly Seed Allocation Programme - DarwinIA SILVER</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5118,7 +5118,7 @@
                         <div class="video-info">
                             <h3>Corporate Bond Strategy (Backtested)</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5129,7 +5129,7 @@
                         <div class="video-info">
                             <h3>ChatGPT's False Facts: My Son's Kevin Davey Story! #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5140,7 +5140,7 @@
                         <div class="video-info">
                             <h3>The secret behind consistently profitable traders!</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5151,7 +5151,7 @@
                         <div class="video-info">
                             <h3>FINAL UPDATE: I Am Letting An AI Algo Trade My Money For 30 Days -Can A Robot Beat The Market & Me?</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5164,16 +5164,16 @@
                             <h3>[REAL ACCOUNT] Forex & CFD Expert Advisor Livetrading + Q&A Session
 (XAUUSD, USDJPY, US30...)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=gqWOBI60jak" target="_blank">
-                        <img src="https://i.ytimg.com/vi/gqWOBI60jak/mqdefault.jpg" alt="Coding a Forex Factory News Filter for the5ers Prop Firm Expert Advisor">
+                        <img src="https://i.ytimg.com/vi/gqWOBI60jak/mqdefault.jpg" alt="News Filter Programming for MT5 Expert Advisor (mql5 Tutorial)">
                         <div class="video-info">
-                            <h3>Coding a Forex Factory News Filter for the5ers Prop Firm Expert Advisor</h3>
+                            <h3>News Filter Programming for MT5 Expert Advisor (mql5 Tutorial)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
                             <div class="date">Yesterday</div>
                         </div>
@@ -7242,7 +7242,7 @@
                         <div class="video-info">
                             <h3>The Bizarre Cult of Pythagoras</h3>
                             <div class="channel">Einzelgänger</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7253,7 +7253,7 @@
                         <div class="video-info">
                             <h3>Pythagoras Was a Cult Leader</h3>
                             <div class="channel">Einzelgänger</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7264,7 +7264,7 @@
                         <div class="video-info">
                             <h3>How Pythagoras Punished His Followers</h3>
                             <div class="channel">Einzelgänger</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7275,7 +7275,7 @@
                         <div class="video-info">
                             <h3>Spiritual Growth Is Beyond Your Comfort Zone | Eckhart Tolle on The Path To Enlightenment (Part 1)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7286,7 +7286,7 @@
                         <div class="video-info">
                             <h3>#Throwback2019 Sadhguru's Visit to Mahatma Gandhi's Sabarmati Ashram</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7297,7 +7297,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Using Reality to Let Go of Yourself</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7308,7 +7308,7 @@
                         <div class="video-info">
                             <h3>Vijayadashami – A Day of Victory | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -9576,7 +9576,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN REMATCH BUT THEY'RE ACTUALLY GOOD?</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
