--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>How Likely Is a Trend to Continue After ATR Surge?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">41 minutes ago</div>
+                        <div class="date">50 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -189,16 +189,16 @@
                     <div class="video-info">
                         <h3>Revealing my Strategies to any Pass Prop Firm Challenge (+ Backtests)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=s_RnBChfBqA" target="_blank">
-                    <img src="https://i.ytimg.com/vi/s_RnBChfBqA/mqdefault.jpg" alt="The Bizarre Cult of Pythagoras">
+                    <img src="https://i.ytimg.com/vi/s_RnBChfBqA/mqdefault.jpg" alt="Why Pythagoras Was Basically a Cult Leader">
                     <div class="video-info">
-                        <h3>The Bizarre Cult of Pythagoras</h3>
+                        <h3>Why Pythagoras Was Basically a Cult Leader</h3>
                         <div class="channel">Einzelgänger</div>
                         <div class="date">19 hours ago</div>
                     </div>
@@ -288,7 +288,7 @@
                     <div class="video-info">
                         <h3>#Throwback2019 Sadhguru's Visit to Mahatma Gandhi's Sabarmati Ashram</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>How Likely Is a Trend to Continue After ATR Surge?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">41 minutes ago</div>
+                            <div class="date">50 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5116,7 +5116,7 @@
                         <div class="video-info">
                             <h3>Revealing my Strategies to any Pass Prop Firm Challenge (+ Backtests)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7256,9 +7256,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=s_RnBChfBqA" target="_blank">
-                        <img src="https://i.ytimg.com/vi/s_RnBChfBqA/mqdefault.jpg" alt="The Bizarre Cult of Pythagoras">
+                        <img src="https://i.ytimg.com/vi/s_RnBChfBqA/mqdefault.jpg" alt="Why Pythagoras Was Basically a Cult Leader">
                         <div class="video-info">
-                            <h3>The Bizarre Cult of Pythagoras</h3>
+                            <h3>Why Pythagoras Was Basically a Cult Leader</h3>
                             <div class="channel">Einzelgänger</div>
                             <div class="date">19 hours ago</div>
                         </div>
@@ -7304,7 +7304,7 @@
                         <div class="video-info">
                             <h3>#Throwback2019 Sadhguru's Visit to Mahatma Gandhi's Sabarmati Ashram</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
